# polybot

./: .cursorrules  .gitignore  Cargo.toml  README.md  SETUP.md  mission.md  output.txt  requirements.txt  response.json
reference/: README.md  trade_executor_sample.ts  trade_monitor_sample.ts
src/: config.rs  lib.rs  main.rs
src/analysis/: mod.rs  trader_analyzer.rs
src/arbitrage/: detector.rs  executor.rs  market_matcher.rs  mod.rs
src/kalshi/: client.rs  mod.rs  types.rs
src/paper_trading/: engine.rs  mod.rs  portfolio.rs  trade_log.rs
src/polymarket/: client.rs  mod.rs  signer.rs  types.rs
src/strategies/: copy_trader.rs  mod.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
src/utils/: cache.rs  circuit_breaker.rs  mod.rs  position_tracker.rs
