[package]
name = "polymarket-kalshi-arbitrage-bot"
version = "0.1.0"
edition = "2021"
description = "High-performance Polymarket-Kalshi arbitrage trading bot written in Rust"
keywords = ["polymarket", "kalshi", "arbitrage", "trading-bot", "prediction-markets"]
authors = ["Your Name"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "blocking"] }

# WebSocket support
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Ethereum/Web3
ethers = { version = "2.0", features = ["legacy"] }

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# Cryptography
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
rsa = { version = "0.9", features = ["sha2"] }
pkcs1 = { version = "0.7", features = ["pem"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }

# Utilities
anyhow = "1.0"
chrono = "0.4"
dotenvy = "0.15"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Performance
rustc-hash = "2.0"
governor = "0.6"
nonzero_ext = "0.3"
arrayvec = "0.7"
wide = "0.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
